--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/docs/{{ if site.Params.doks.docsVersioning }}{{ site.Params.doks.docsVersion }}/{{ end }}guides/example-guide/" role="button">{{ i18n "get_started" }}</a>
+      <!-- <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/docs/{{ if site.Params.doks.docsVersioning }}{{ site.Params.doks.docsVersion }}/{{ end }}guides/example-guide/" role="button">{{ i18n "get_started" }}</a> -->
       {{ .Content }}
     </div>
   </div>
@@ -24,20 +24,23 @@
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
-          <h2 class="h4">Update content</h2>
-          <p>Edit <code>content/_index.md</code> to see this page change.</p>
+          <h2 class="h4">Join us</h2>
+	  <p><a href="https://join.slack.com/t/unikraftworkspace/shared_invite/zt-1v5zz3l3l-B6~36Me9SpWycaS2TximSA">Slack Workspace</a></p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">Add new content</h2>
-          <p>Add Markdown files to <code>content</code> to create new pages.</p>
+          <h2 class="h4">Mission statement</h2>
+	  <p>The Unikernel Alliance was recently formed to group a large set of open source unikernel (specialized VMs) projects all on a mission to significantly improve cloud deployment efficiency, lower cloud resources spend and run equivalent workloads on a much smaller infrastructure, leading to greener deployments.
+</p>
+        </div>
+
+        <div class="col-lg-5">
+          <h2 class="h4">Regular Meetings</h2>
+	  <p>Last thursday of each month @ 5PM UTC</p>
+	  <p><a href="https://us06web.zoom.us/j/83474439883?pwd=VVROZ1YrTmJkWS9lNVRrRnhPOVhPUT09">Zoom link</a></p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">Configure your site</h2>
-          <p>Edit your config in <code>config/_default/hyas/doks.toml</code>.</p>
-        </div>
-        <div class="col-lg-5">
-          <h2 class="h4">Read the docs</h2>
-          <p>Learn more in the <a href="https://getdoks.org/">Docs</a>.</p>
+          <h2 class="h4">Join the Google Group</h2>
+	  <p><a href="https://groups.google.com/g/unikernel-alliance">Google group</a></p>
         </div>
       </div>
     </div>
