index: Update Slack workspace invitation
This updates the invite link with a working one, set to never expire.

Signed-off-by: Fotis Xenakis <foxen@windowslive.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,7 +25,7 @@
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
           <h2 class="h4">Join us</h2>
-	  <p><a href="https://join.slack.com/t/unikraftworkspace/shared_invite/zt-1v5zz3l3l-B6~36Me9SpWycaS2TximSA">Slack Workspace</a></p>
+	  <p><a href="https://join.slack.com/t/unikernel-alliance/shared_invite/zt-26w5gig2a-sR8Llf7B9ivX_EUovM6iXw">Slack Workspace</a></p>
         </div>
         <div class="col-lg-5">
           <h2 class="h4">Mission statement</h2>
